--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -57,7 +57,7 @@ const mainImage = project.images.at(0);
             </div>
         </div>
 
-        <article class="prose max-w-[90%] text-secondary">
+        <article class="prose max-w-[90%]">
             <Fragment set:html={projectEntry.body} />
         </article>
         <div class="flex gap-2 my-4 flex-wrap content-around">
