--- a/src/components/AboutCard.astro
+++ b/src/components/AboutCard.astro
@@ -17,7 +17,7 @@ const icon = "carbon:identification";
         </div>
     </div>
 
-    <article class="prose leading-8 lg:leading-9 text-secondary">
+    <article class="prose leading-8 lg:leading-9">
         <Fragment
             class:list=" md:text-justify"
             set:html={about.compiledContent()}
