feat: `ContactCard` design

--- a/src/components/ContactCard.astro
+++ b/src/components/ContactCard.astro
@@ -5,9 +5,8 @@ import { Icon } from "astro-icon/components";
 
 <a target="_blank" href={url}>
   <button
-    class="btn btn-netural lg:btn-ghost lg:btn-wide justify-center h-20 lg:h-auto lg:justify-start items-center duration-500"
+    class="btn lg:btn-ghost min-w-[80px] lg:min-w-[64px] h-[54px] lg:h-auto duration-500"
   >
-    <Icon name={icon} class="w-6 h-6" />
-    <div class="">{url_name}</div>
+    <Icon name={icon} class="w-5 h-5" />
   </button>
 </a>
