feat: add `Footer` component

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,4 @@
-<p class="flex justify-start font-light text-sm text-secondary">
+<p class="flex justify-start font-light text-sm">
   Made with <a
     target="_blank"
     title="Astro (Astro.js)"
@@ -7,8 +7,8 @@
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
-      width="24"
-      height="24"
+      width="20"
+      height="20"
       viewBox="0 0 32 32"
       ><path
         fill="url(#vscodeIconsFileTypeAstro0)"
